feat(package.json): Add redux types lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "src/__tests__/pages/signup/Signup.test.js"],
 }
